--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.1.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "sass": "^1.66.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "^3.3.3",
     "web-vitals": "^2.1.4"
   },
